<resources>
    <string name="app_name">Arbor Familiae</string>
    <string name="version">Version</string>
    <string name="about_author">Written by Serge Meunier</string>
    <string name="about_copyright">Released under the Creative Commons license</string>
    <string name="about_description">Arbor Familiae allows you to view your family tree using various charts and views. Trees can be imported into the app using GEDCOM files. This app does not allow editing the data.</string>

    <string name="about_individualview_header">Individual</string>
    <string name="about_individualview_description">This view shows the biographical information for the currently active individual, including information on parents, spouses and children. You can navigate through the family by clicking on the names of the family members in this view</string>

    <string name="about_fanchart_header">Fan Chart</string>
    <string name="about_fanchart_description">The fan chart shows the ancestors or descendants of the active individual in a fan chart. Clicking on the centre of the chart switches between ancestor/descendant view. Long clicking on the individuals sets that individual as the root.</string>

    <string name="about_heatmap_header">Heatmap</string>
    <string name="about_heatmap_description">The heatmap shows the locations on a map for events of ancestors related to the active individual. In order for the heatmap to show locations, the places listed for the events in the imported GEDCOM need to have associated longitude and latitude coordinates.</string>

    <string name="about_tree_header">Tree Chart</string>
    <string name="about_tree_description">The tree view shows the relationships of the active individual in a tree structure. Clicking on individuals sets that individual to the root of the tree.</string>

    <string name="about_relationship_header">Relationship Chart</string>
    <string name="about_relationship_description">The relationship chart calculates and displayes the relationship between the root and active individuals</string>

    <string name="about_search_header">Search</string>
    <string name="about_search_description">Searches current tree for the matching individual based on first name, surname or suffix</string>

    <string name="about_treelist_header">Tree List</string>
    <string name="about_treelist_description">The tree list view shows all currently available trees saved. From this view you can also import new trees from GEDCOM files and select an active tree</string>

    <string name="about_reports_header">Reports</string>
    <string name="about_reports_description">Reports allow you to generate descendant/ancestor reports. The reports can be either exported to a text file and shared with other applications, or displayed on screen. The report data is both horizontally and vertically scrollable. The available reports are: Detailed ancestry, Ancestry summary, Leaf ancestors, Descendants, mt-DNA, Y-DNA, Places, Countries, Lifespans, and Surnames.</string>

    <string name="about_credits">Credits</string>
    <string name="about_credits_patternhead">Background image - John Rawsterne/Patternhead (www.patternhead.com).</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About</string>
    <string name="action_fanchart">Fan Chart</string>
    <string name="action_heatmap">Heatmap</string>
    <string name="action_help">Help</string>
    <string name="action_individual_details">Details</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_tree">Tree Chart</string>
    <string name="action_trees">Manage Trees</string>
    <string name="action_recent">Recent</string>
    <string name="action_reports">Reports</string>
    <string name="action_relationship">Relationship Chart</string>
    <string name="action_lines_of_descent">Lines of Descent</string>

    <string name="action_set_home_person">Set as root</string>
    <string name="action_jump_to_root">Jump to root</string>

    <string name="search_hint">Search name...</string>

    <string name="progress_import">Importing Gedcom</string>
    <string name="progress_tree">Loading Tree</string>
    <string name="progress_pleasewait">Please wait...</string>
    <string name="progress_calculatingrelationship">Calculating relationship</string>
    <string name="progress_exporting">Exporting</string>
    <string name="progress_generating_report">Generating report</string>

    <string name="treelist_individuals">%d individuals</string>
    <string name="treelist_families">%d families</string>

    <string name="error_unable_to_resolve_file">Unable to resolve file</string>
    <string name="error_unable_to_read_file">Unable to read file</string>
    <string name="message_parsing_gedcom">Parsing Gedcom. This might take a while.</string>
    <string name="message_tree_deleted">Deleted tree</string>
    <string name="message_tree_selected">Selected tree</string>
    <string name="message_root_person_set">Root individual set to</string>

    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>
    <string name="no_tree_selected">&lt;No tree selected&gt;</string>

    <string name="tab_biographical">Biographical</string>
    <string name="tab_notes">Notes</string>
    <string name="tab_sources">Sources</string>

    <string name="header_biographical">Biographical</string>
    <string name="header_family">Family</string>
    <string name="header_notes">Notes</string>
    <string name="header_sources">Sources</string>

    <string name="label_name">Name</string>
    <string name="label_birth">Birth</string>
    <string name="label_death">Death</string>
    <string name="label_baptism">Baptism</string>
    <string name="label_burial">Burial</string>
    <string name="label_occupation">Occupation</string>
    <string name="label_father">Father</string>
    <string name="label_mother">Mother</string>
    <string name="label_gedcomid">Gedcom ID</string>
    <string name="label_also_known_as">Also known as</string>

    <string name="label_root">Root</string>
    <string name="label_active">Active</string>

    <string name="label_included_individuals">Included Individuals</string>
    <string name="label_report_type">Report Type</string>
    <string name="label_maximum_generations">Maximum generations back</string>
    <string name="report_type_prompt">Report Type</string>

    <string name="button_rateapp">Rate App</string>
    <string name="button_feedback">Send Feedback</string>
    <string name="button_export_report">Export</string>
    <string name="button_display_report">Display</string>
    <string name="button_next">Next</string>
    <string name="button_prev">Prev</string>

    <string name="error_market_not_found">Could not open Android market, please install the market app.</string>
    <string name="error_could_not_share_chart">Could not share chart.</string>

    <string name="dialog_share_chart_with">Share this chart with</string>
    <string name="dialog_share_report_with">Share this report with</string>

    <string name="mail_feedback_title">Send Feedback</string>
    <string name="mail_feedback_email">sjmeunier@gmail.com</string>
    <string name="mail_feedback_subject">Feedback on Arbor Familiae</string>

    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_rename_tree">Rename tree</string>

    <string name="label_empty_tree_list">No trees found. Please import a GEDCOM file by clicking on the + button</string>

    <string name="preferences_general">General</string>
    <string name="preferences_title_generations_treechart">Generations in tree chart</string>
    <string name="preferences_title_generations_fanchart">Generations in fan chart</string>
    <string name="preferences_title_generations_heatmap">Generations in heatmap</string>
    <string name="preferences_title_generations_lines_of_descent">Generations in lines of descent chart</string>
    <string name="preferences_summary_generations_treechart">Number of generations to show in treechart</string>
    <string name="preferences_summary_generations_fanchart">Number of generations to show in fanchart</string>
    <string name="preferences_summary_generations_heatmap">Number of generations to show in heatmap</string>
    <string name="preferences_summary_generations_lines_of_descent">Number of generations to calculate in lines of descent</string>
    <string name="preferences_dialog_title_generations">Generations to show</string>

    <string name="preferences_title_nameformat">Name format</string>
    <string name="preferences_summary_nameformat">Name format to show in charts</string>
    <string name="preferences_dialog_title_nameformat">Name format</string>

    <string name="preferences_heatmap">Heatmap</string>
    <string name="preferences_title_heatmap_events">Heatmap events</string>
    <string name="preferences_dialog_title_heatmap_events">Heatmap events</string>

    <string name="report_ancestry_detailed">The detailed ancestry report gives detailed biographical information for all ancestors of the active individual, up to the specified number of generations</string>
    <string name="report_ancestry_summary">The ancestry summary report gives a basic summary for all ancestors of the active individual, up to the specified number of generations</string>
    <string name="report_leaf_ancestors">The leaf ancestor report gives a basic summary for all ancestors of the active individual, which are missing one or both parents, up to the specified number of generations</string>
    <string name="report_descendant">The descendant report shows all descendants of the active individual, up to the specified number of generations</string>
    <string name="report_mtdna">The mt-DNA report finds the oldest ancestor with the same mt-DNA as the active individual (the maternal lineage), and then generates all descendants of this individual which share the same mt-DNA, up to the specified number of generations</string>
    <string name="report_ydna">The Y-DNA report finds the oldest ancestor with the same Y-DNA as the active individual (the paternal lineage), and then generates all descendants of this individual which share the same Y-DNA, up to the specified number of generations</string>
    <string name="report_places">The places report lists all places included in the life events of the ancestors, descendants of the active individual, up to the specified number of generations, or of the whole tree, including the number of occurrences of the place</string>
    <string name="report_lifespan">The lifespan report shows a summary of the lifespans of the ancestors or descendants of the active individual, or of the whole tree, up to the specified number of generations</string>
    <string name="report_countries">The countries report lists all countries included in the life events of the ancestors or descendants of the active individual, up to the specified number of generations, or of the whole tree, including the number of occurrences of the country. The report assumes that the last part of a place name, separated by commas, is the country.</string>
    <string name="report_surname">The surname report lists all surnames of the ancestors or descendants of the active individual, up to the specified number of generations, or of the whole tree, including the number of occurrences.</string>

</resources>
