<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_report_type">
        </TextView>
        <Spinner
            android:id="@+id/report_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@color/colorPrimary"
            />
        <TextView
            android:id="@+id/label_included_individuals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_included_individuals">
        </TextView>
        <Spinner
            android:id="@+id/included_individuals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@color/colorPrimary"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_maximum_generations">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="10"
            android:id="@+id/maximum_generations"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">
            <Button
                android:id="@+id/button_display_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:text="@string/button_display_report" />

            <Button
                android:id="@+id/button_generate_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:text="@string/button_export_report"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/report_description"
            android:text="" />
        <HorizontalScrollView
            android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/report_output"
                android:fontFamily="monospace"
                android:typeface="monospace"
                android:text="" />
        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>